TestSuite/PascalABCTests/errors/err0229.pas
begin
  case 1 of
  1: var t: integer
  end;
end.